and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

4th June 2014 L. Desorgher (tracking-V10-00-00)
-Corrections in G4AdjointSteppingAction and G4AdjointTrackingAction  to have
 the treatment of adj and forward tracks in the same event

29th November2013 M.Asai (tracking-V09-06-10)
- G4VTrajectory::ShowTrajectory() : add missing \\n.

28th November2013 M.Asai (tracking-V09-06-09)
- G4SteppingManager::fTouchableHistory data member is cleared in the
  destructor to avoid double-deletion in MT mode.

21st November2013 J.Perl (tracking-V09-06-08)
- G4TrackingManager : Add handling for StoreTrajectory new case 4

21st November2013 M.Asai (tracking-V09-06-07)
- G4TrackingMessenger : Move invokation with G4TransportationManager 
  in G4VisCommandsSceneAdd.cc to this G4TrakingMessenger. 
  Since G4TransportationManager is thread-local,
  G4VisCommandsSceneAdd.cc cannot access to G4TransportationManager.

3rd November2013 L.Desorgher (tracking-V09-06-06)
-G4AdjointTrackingAction. Change order of initialization in constructor to 
  avoid compilation warning.

31th October2013 L.Desorgher (tracking-V09-06-05)
-Create G4AdjointTrackingAction and modify G4AdjointSteppingAction in order to 
treat the reverse tracking of an adjoint particle and tracking of its 
equivalent forward particle in the same event.This is requested for the 
migration of the ReverseMC to the MT mode.  

29th August 2013 M.Asai (tracking-V09-06-04)
- Add protection against null pointer for the process manager of
  secondaries in case secondaries are generated at zero kinetic energy.

11th April 2013 G.Cosmo (tracking-V09-06-03)
- Cleanup of automatic changes for MT in classes: G4RichTrajectory,