@@ -318,6 +318,11 @@ void G4SteppingManager::SetInitialStep(G4Track* valueTrack)
         fTrack->SetNextTouchableHandle( fTouchableHandle );
      }
   }
+// Set OriginTouchableHandle for primary track
+   if(fTrack->GetParentID()==0){
+     fTrack->SetOriginTouchableHandle(fTrack->GetTouchableHandle());
+   }
+
 // Set vertex information of G4Track at here
    if ( fTrack->GetCurrentStepNumber() == 0 ) {
      fTrack->SetVertexPosition( fTrack->GetPosition() );
